# lab4

./: CMakeLists.txt
.github/workflows/: main.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world/formatter_ex_lib/: Makefile  cmake_install.cmake
hello_world/formatter_lib/: Makefile  cmake_install.cmake
hello_world/hello_world_application/: Makefile  cmake_install.cmake  hello_world
hello_world/solver_application/: Makefile  cmake_install.cmake  equation
hello_world/solver_lib/: Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
